--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 spring:
   application:
-    name: product1
+    name: product
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
